--- a/index.html
+++ b/index.html
@@ -58,21 +58,27 @@
 <!-- Финальная фраза -->
 <div id="finalText">
     смешно? регина повесила в туалете<br>
-    и да, если ты это читаешь — спасибо, что вообще дочитала
+    и да, если ты это читаешь — спасибо
 </div>
 
 <script>
     const text = `нахуя?
-честно говоря было несколько вариаций текста, кода что ты сейчас видишь - все хуйня и роешил написать просто что думаю сплошняком.
-нахуя щас ? наверное потому , что все это время как то не верится что ли во все это настолько привык уж , не могу дать точного определения . огромная просьба заранее , не злись на этот мув пожалуйста(plsrng) , в моей голове это кажется важным и без этих мини подарков это не все для меня.
+честно говоря было несколько вариаций текста, кода что ты сейчас видишь - все хуйня и решил написать просто что думаю сплошняком.
+нахуя щас ? наверное потому , что все это время как то не верится что ли во все это настолько привык уж , не могу дать точного определения . огромная просьба заранее , не злись на этот мув пожалуйста(plsrng) , я проснулся с этой мыслью все это сделать и уже который день думал как все это сделать и без этого нет успокоения...
 заранее скажу, не подумай, что всем этим я пытаюсь все вернуть и тд - а просто сделать приятное и хотя бы  быть в твоей голове меньшим уебком и мудаком. 
 было бы замечатело , если ты примешь все это и не выкинешь в помойку :) 
 думаю обо всем спустя почти 2 недели думаешь - господи как ты эти момент не учел ваще , а ведь из мелочей и копится этот огромный пузырь и в моменте лопается 
 да да это полный кринж какой то что я пишу , но чувство недосказанности присутсвует и хотелось чутка это вывалить наружу хотя бы в этом коде , не смейся с этого слишкмо громко ахвыха
 так вот, прости за во первых потраченное время на меня , что все так к сожалению закончилось , я вот ща дуамю что это действительно самое адекватное общение было в моей жизни , без мозгоебств , без качелей , без депрессий !?
-никогда в жизни не делал подобного (верь!) , но тебе почему то захотелось немного высказаться , ты по сути то и явлешсья одним из первых моих знакомых казанский с кем я еще как то пересекался в будущем  , а уж тем более встречался..?
-переживаю как будтто на экзмене каком то , но больше за то что ты отхуесосишь за этот мув такой , поэтому надеюсь такого не будет pleeease.  
-надеюсь цветочки понравятся ну и мнии приколы. `;
+не стал говороить это, когда мы общались в тот день , но блять, действительно привык слишком быть один и не мог свыкнуться в своей башке , что я не один и нужно больше уделять времени своей второй половинке , хотя это как бы и очевидно , но +- я как то старался , но не настолько сильно(
+спустя время понимаешь , что даже мелочи типо лайков важны , однажды на рилс подобной наткнулся , но с таким я правда столкнулся впервые.
+все это вылядит как оправдания , но нет, я решил в своей голове придумать минмиблог с самим собой , доступ к которому будет только у тебя и вот таким образом выгооворится без обратной связи , так скажем
+как пел славик "а все начиналось так красиво и легко , зеркальный потолок как в эротическом кино , о такой как ты я мечтаю с детства , но веду себя как мудак, естественно" вот про мудака тут прям в точку 
+никогда в жизни не делал подобных изьебств (верь!) , но тебе почему то захотелось немного высказаться ,
+переживаю как будтто на экзмене каком то , но больше за то что ты отхуесосишь за этот мув такой , поэтому надеюсь такого не будет pleeease...
+текст был написан на одном дыхании, прости за несвязанную мысль в тексте, я все еще не сдал экзамен по русскому языку в миграционной службе поэтому так...
+
+надеюсь цветочки понравятся ну и минии приколы. `;
 
 
     const output = document.getElementById("output");
@@ -82,7 +88,7 @@
     const cursor = document.getElementById("cursor");
 
     let i = 0;
-    const speed = 40;
+    const speed = 35;
 
     finalImage.style.display = "none";
     finalText.style.display = "none";
