--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
 переживаю как будтто на экзмене каком то , но больше за то что ты отхуесосишь за этот мув такой , поэтому надеюсь такого не будет pleeease...
 текст был написан на одном дыхании, прости за несвязанную мысль в тексте, я все еще не сдал экзамен по русскому языку в миграционной службе поэтому так...
 
-надеюсь цветочки понравятся ну и минии приколы. `;
+надеюсь цветочки понравятся ну и минии приколы. 
+из новостей , кстати из ток шоу дом 3 на четаева , настя живет снова у нас втф!? ринат снова начал громоко орать на регину ,  drugs and alchohol из двух комнат ...
+`;
 
 
     const output = document.getElementById("output");
