--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
 никогда в жизни не делал подобных изьебств (верь!) , но тебе почему то захотелось немного высказаться ,
 переживаю как будтто на экзмене каком то , но больше за то что ты отхуесосишь за этот мув такой , поэтому надеюсь такого не будет pleeease...
 текст был написан на одном дыхании, прости за несвязанную мысль в тексте, я все еще не сдал экзамен по русскому языку в миграционной службе поэтому так...
-
+UPD: да да пакетики кринж ахвыхахыва , но это единсвтенные более менее нормальные пакеты , в округе ((
+UPD 2 : полисорб попей обязательно с водой , станет лучше 
+код менялся по мере новых новостей !
 надеюсь цветочки понравятся ну и минии приколы. 
 из новостей , кстати из ток шоу дом 3 на четаева , настя живет снова у нас втф!? ринат снова начал громоко орать на регину ,  drugs and alchohol из двух комнат ...
 `;
