--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 UPD: да да пакетики кринж ахвыхахыва , но это единсвтенные более менее нормальные пакеты , в округе ((
 UPD 2 : полисорб попей обязательно с водой , станет лучше 
 код менялся по мере новых новостей !
-надеюсь цветочки понравятся ну и минии приколы. 
+надеюсь цветочки хотя бы немного понравятся, решил заказать впервые в слепую и прислали вроде красивые , но и не особо будто бы...
 из новостей , кстати из ток шоу дом 3 на четаева , настя живет снова у нас втф!? ринат снова начал громоко орать на регину ,  drugs and alchohol из двух комнат ...
 `;
 
