--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 нахуя щас ? наверное потому , что так и не наступили те самые стадии принятия что ли, уж слишком привык за небольшой такой период и  не подумай, что всем этим я пытаюсь все вернуть и тд - хочу просто сделать приятное и хотя бы  быть в твоей голове меньшим уебком и мудаком. 
 было бы замечатело , если ты примешь все это и не выкинешь в помойку :) 
 думаю обо всем спустя почти 2 недели думаешь - господи как ты эти момент не учел ваще , а ведь из мелочей и копится этот огромный пузырь и в моменте лопается 
-да да это полный кринж какой то будто я настя 2 , но все таки ситуации разные что я пишу , но чувство недосказанности присутсвует и хотелось чутка это вывалить наружу хотя бы в этом коде , не смейся с этого слишкмо громко ахвыха
+да да это полный кринж какой то будто я настя 2 , но все таки ситуации разные , но чувство недосказанности присутсвует и хотелось чутка это вывалить наружу хотя бы в этом коде , не смейся с этого слишкмо громко ахвыха
 так вот, прости за во первых потраченное время на меня , что все так к сожалению закончилось , я вот ща дуамю что это действительно самое адекватное общение было в моей жизни , без мозгоебств , без качелей , без депрессий !?
 не стал говороить это, когда мы общались в тот день , но блять, действительно привык слишком быть один и не мог свыкнуться в своей башке , что я не один и нужно больше уделять времени своей второй половинке , хотя это как бы и очевидно , но +- я как то старался , но не настолько сильно(
 спустя время понимаешь , что даже мелочи типо лайков важны , однажды на рилс подобной наткнулся , но с таким я правда столкнулся впервые.
