--- a/index.html
+++ b/index.html
@@ -52,36 +52,25 @@
 
 <audio id="typeSound" src="https://www.soundjay.com/mechanical/sounds/typewriter-key-1.mp3" preload="auto"></audio>
 
-<!-- КАРТИНКА -->
-<img id="finalImage" src="photo_2025-12-03_17-55-44.jpg" alt="image">
 
-<!-- Финальная фраза -->
-<div id="finalText">
-    смешно? регина повесила в туалете<br>
-    и да, если ты это читаешь — спасибо
 </div>
 
 <script>
-    const text = `нахуя?
-честно говоря было несколько вариаций текста, кода что ты сейчас видишь - все хуйня и решил написать просто что думаю сплошняком.
-нахуя щас ? наверное потому , что так и не наступили те самые стадии принятия что ли, уж слишком привык за небольшой такой период и  не подумай, что всем этим я пытаюсь все вернуть и тд - хочу просто сделать приятное и хотя бы  быть в твоей голове меньшим уебком и мудаком. 
-было бы замечатело , если ты примешь все это и не выкинешь в помойку :) 
-думаю обо всем спустя почти 2 недели думаешь - господи как ты эти момент не учел ваще , а ведь из мелочей и копится этот огромный пузырь и в моменте лопается 
-да да это полный кринж какой то будто я настя 2 , но все таки ситуации разные , но чувство недосказанности присутсвует и хотелось чутка это вывалить наружу хотя бы в этом коде , не смейся с этого слишкмо громко ахвыха
-так вот, прости за во первых потраченное время на меня , что все так к сожалению закончилось , я вот ща дуамю что это действительно самое адекватное общение было в моей жизни , без мозгоебств , без качелей , без депрессий !?
-не стал говороить это, когда мы общались в тот день , но блять, действительно привык слишком быть один и не мог свыкнуться в своей башке , что я не один и нужно больше уделять времени своей второй половинке , хотя это как бы и очевидно , но +- я как то старался , но не настолько сильно(
-спустя время понимаешь , что даже мелочи типо лайков важны , однажды на рилс подобной наткнулся , но с таким я правда столкнулся впервые.
-все это вылядит как оправдания , но нет, я решил в своей голове что это все нужно выговориь хоть и не в жизни , а вот здесь и  придумать миниблог с самим собой , доступ к которому будет только у тебя и вот таким образом выгооворится без обратной связи , так скажем
-как пел славик "а все начиналось так красиво и легко , зеркальный потолок как в эротическом кино , о такой как ты я мечтаю с детства , но веду себя как мудак, естественно" вот про мудака тут прям в точку 
-никогда в жизни не делал подобных изьебств (верь!) , но тебе почему то захотелось немного высказаться ,
-переживаю как будтто на экзмене каком то , но больше за то что ты отхуесосишь за этот мув такой , поэтому надеюсь такого не будет pleeease...
-текст был написан на одном дыхании, прости за несвязанную мысль в тексте, я все еще не сдал экзамен по русскому языку в миграционной службе поэтому так...
-UPD: да да пакетики кринж ахвыхахыва , но это единсвтенные более менее нормальные пакеты , в округе ((
-UPD 2 : полисорб попей обязательно с водой , станет лучше 
-код менялся по мере новых новостей ! 
-сильно не кринжуйте и не угарайте... я к сожалению не романтик и не творчесий человек , но  хоть как то не банально придумал написать текст ;)
-надеюсь цветочки хотя бы немного понравятся, решил заказать впервые в слепую и прислали вроде красивые , но и не особо будто бы...
-из новостей , кстати из ток шоу дом 3 на четаева , настя живет снова у нас втф!? ринат снова начал громоко орать на регину ,  drugs and alchohol из двух комнат ...
+    const text = `
+Я буду ждать тебя мучительно,
+Я буду ждать тебя года,
+Ты манишь сладко-исключительно,
+Ты обещаешь навсегда.
+
+Своей усмешкой вечно-кроткою,
+Лицом, всегда склоненным ниц,
+Своей неровною походкою
+Крылатых, но не ходких птиц,
+
+Ты будишь чувства тайно-спящие,
+И знаю, не затмит слеза
+Твои куда-то прочь глядящие,
+Твои неверные глаза.
 `;
 
 
