--- a/index.html
+++ b/index.html
@@ -40,20 +40,20 @@
 
 <script>
     const text = `
-Я буду ждать тебя мучительно,
-Я буду ждать тебя года,
-Ты манишь сладко-исключительно,
-Ты обещаешь навсегда.
-
-Своей усмешкой вечно-кроткою,
-Лицом, всегда склоненным ниц,
-Своей неровною походкою
-Крылатых, но не ходких птиц,
-
-Ты будишь чувства тайно-спящие,
-И знаю, не затмит слеза
-Твои куда-то прочь глядящие,
-Твои неверные глаза.
+Быть может через годы, быть может через дни,
+С тобой мы будем вместе, и будем мы одни.
+И сердце сердцу скажет, что в смене дней и лет,
+Есть вечный, негасимый, неуловимый свет.
+Он был у нас во взорах, названья нет ему,
+Он будет снова — знаю, не зная, почему.
+Но мы, переменившись во внешностях своих,
+Друг другу молча скажем, глазами, яркий стих.
+Мы скажем: Вот, мы вместе. Где жизнь? Где мир? Где плен?
+Мы — жизнь, и в переменах для сердца нет измен.
+Еще, еще мы скажем, но что, не знаю я,
+Лишь знаю, что бессмертна любовь и жизнь моя.
+Лишь знаю — побледнею, и побледнеешь ты,
+И в нас обоих вспыхнут, лишь нами, все черты.
 `;
 
     const output = document.getElementById("output");
