--- a/index.html
+++ b/index.html
@@ -40,21 +40,26 @@
 
 <script>
     const text = `
-Быть может через годы, быть может через дни,
-С тобой мы будем вместе, и будем мы одни.
-И сердце сердцу скажет, что в смене дней и лет,
-Есть вечный, негасимый, неуловимый свет.
-Он был у нас во взорах, названья нет ему,
-Он будет снова — знаю, не зная, почему.
-Но мы, переменившись во внешностях своих,
-Друг другу молча скажем, глазами, яркий стих.
-Мы скажем: Вот, мы вместе. Где жизнь? Где мир? Где плен?
-Мы — жизнь, и в переменах для сердца нет измен.
-Еще, еще мы скажем, но что, не знаю я,
-Лишь знаю, что бессмертна любовь и жизнь моя.
-Лишь знаю — побледнею, и побледнеешь ты,
-И в нас обоих вспыхнут, лишь нами, все черты.
-`;
+Я мечтою ловил уходящие тени,
+Уходящие тени погасавшего дня,
+Я на башню всходил, и дрожали ступени,
+И дрожали ступени под ногой у меня.
+И чем выше я шел, тем ясней рисовались,
+Тем ясней рисовались очертанья вдали,
+И какие-то звуки вокруг раздавались,
+Вкруг меня раздавались от Небес и Земли.
+Чем я выше всходил, тем светлее сверкали,
+Тем светлее сверкали выси дремлющих гор,
+И сияньем прощальным как будто ласкали,
+Словно нежно ласкали отуманенный взор.
+А внизу подо мною уж ночь наступила,
+Уже ночь наступила для уснувшей Земли,
+Для меня же блистало дневное светило,
+Огневое светило догорало вдали.
+Я узнал, как ловить уходящие тени,
+Уходящие тени потускневшего дня,
+И все выше я шел, и дрожали ступени,
+И дрожали ступени под ногой у меня.
 
     const output = document.getElementById("output");
     const typeSound = document.getElementById("typeSound");
