--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 Я узнал, как ловить уходящие тени,
 Уходящие тени потускневшего дня,
 И все выше я шел, и дрожали ступени,
-И дрожали ступени под ногой у меня.
+И дрожали ступени под ногой у меня. `
 
     const output = document.getElementById("output");
     const typeSound = document.getElementById("typeSound");
