Enhance poem text in index.html
Added additional lines of text to the poem in index.html.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,19 @@ const text = `
 И чем выше я шел, тем ясней рисовались,
 Тем ясней рисовались очертанья вдали,
 И какие-то звуки вокруг раздавались,
-Вкруг меня раздавались от Небес и Земли.
+Вкруг меня раздавались от Небес и Земли
+Чем я выше всходил, тем светлее сверкали,
+Тем светлее сверкали выси дремлющих гор,
+И сияньем прощальным как будто ласкали,
+Словно нежно ласкали отуманенный взор.
+А внизу подо мною уж ночь наступила,
+Уже ночь наступила для уснувшей Земли,
+Для меня же блистало дневное светило,
+Огневое светило догорало вдали.
+Я узнал, как ловить уходящие тени,
+Уходящие тени потускневшего дня,
+И все выше я шел, и дрожали ступени,
+И дрожали ступени под ногой у меня..
 `;
 
 const output = document.getElementById("output");
